# rslite-ws

./: .gitignore  .gitmodules  Dockerfile  README.md  README_PORTING.md  context_entrypoint.sh  docker-entrypoint.sh  run-docker-patterns.sh  run-docker-porting (copy).sh  run-docker-porting-loop.sh  run-docker-porting.sh  run-docker-work-on-sqlite.sh  run-docker-workspace.sh
ansible/: README.md  playbook.yml  vars.yml
c2rust-projects/: CREATE_SQLITE_LIB.sh  GENERATE_C2RUST_PROJECTS.sh  GENERATE_C2RUST_PROJECTS_README.md  README.md  TRANSPILE_SQLITE_DEFINES.sh  c2rust-lib.toml  generate_diff.sh  required-files.txt
context-layer/: common.sh  context_entrypoint.sh  filter_context.sh
crust_to_rust_loop/: CLAUDE.md  build_all.sh  filter_content_by_context  filter_content_by_context.py  pyproject.toml  shell_build.sh  testfixture_build.sh  testfixture_swap_optimized.sh
docker-scripts/: act-dispatch-workflow.sh  create-context-mirror.sh  create-venv-docker.sh  docker-entrypoint.sh  patterns-docker-deny-file-rules.json  proxy_wrapper.py  proxy_wrapper_config.json  user-entrypoint.sh  y2-plugin-deny-file-rules.json
scripts/: README.txt  cargo-toml-template.txt  commands.sh  crate-requirements.json  crates_common.py  create_crates_boilerplate.py  dedup_incrementally.py  deduplicate_struct.py  find_duplicates.py  get_sorted_porting_files.sh  inline_dedup.py  non-stop.sh  scripts-entrypoint.sh  show_one_of_many_dupes.py
unsafe_rust_fixer/: README.md  __init__.py  base.py  requirements.txt  task-spec.k.json  task-spec.k.md  unsafe-rust-fixer.py
(+175 files in other folders)
