[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crust-sqlite"
version = "0.1.0"
description = "SQLite Rust port"
requires-python = ">=3.8"
dependencies = [
    "serde>=0.9.0",
    "tree_sitter>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
